# raytracing-engine

./: CMakeLists.txt  Makefile  README.md  main.cpp
include/: ansi.h  color.h  ray.h  typedefs.h  vec.h
src/: color.cpp  main.cpp  ray.cpp  vec.cpp
tests/: test.cpp
